# aioshelly

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  devices.json  example.py  mypy.ini  pylintrc  pyproject.toml  requirements-test.txt  requirements.txt  requirements_dev.txt  requirements_lint.txt  ruff.toml  setup.cfg  setup.py  tox.ini  verify.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: pr-labels.yml  pre-commit-update.yml  pythonpublish.yml  release-drafter.yml  test.yml
aioshelly/: __init__.py  block_device.py  coap.py  common.py  const.py  exceptions.py  json.py  rpc_device.py  wsrpc.py  zeroconf.py
aioshelly/ble/: __init__.py  const.py  manufacturer_data.py  parser.py  provisioning.py
aioshelly/ble/backend/: __init__.py  scanner.py
aioshelly/block_device/: __init__.py  coap.py  device.py
aioshelly/rpc_device/: __init__.py  authentication.py  blerpc.py  device.py  models.py  object_mapping.py  utils.py  wsrpc.py
fixtures/: SAWD-0A1XX10EU1- Shelly Wall Display.json  SNPL-00110IT- Shelly Plus Plug IT.json  SNPL-00112EU- Shelly Plus Plug S.json  SNSW-001P16EU- Shelly Plus 1PM.json  SPEM-003CEBEU- Shelly Pro 3EM.json  SPSW-003XE16EU- Shelly Pro 3.json  gen1_Shelly Air_SHAIR-1_20230913-113804-v1.14.0-gcb84623.json  gen1_Shelly Gas_SHGS-1_20230913-114427-v1.14.0-gcb84623.json  gen1_Shelly Plug S_SHPLG-S_20230913-113421-v1.14.0-gcb84623.json  gen1_Shelly Vintage_SHVIN-1_20230913-111730-v1.14.0-gcb84623.json  gen2_Shelly BLU Gateway_SNGW-BT01_20231219-133956-1.1.0-g34b5d4f.json  gen2_Shelly BLU Gateway_SNGW-BT01_20240213-140411-1.2.0-gb1b9aa8.json  gen2_Shelly Plus 1PM_SNSW-001P16EU_20231219-133934-1.1.0-g34b5d4f.json  gen2_Shelly Plus Plug IT_SNPL-00110IT_20231219-133948-1.1.0-g34b5d4f.json  gen2_Shelly Plus Plug S_SNPL-00112EU_20231219-134003-1.1.0-g34b5d4f.json  gen2_Shelly Pro 3EM_SPEM-003CEBEU_20231219-134001-1.1.0-g34b5d4f.json  gen2_Shelly Pro 3_SPSW-003XE16EU_20231219-133956-1.1.0-g34b5d4f.json  gen2_Shelly Pro 4PM_SPSW-004PE16EU_20230912-082358-1.0.3-g6176478.json  gen2_Shelly Wall Display_SAWD-0A1XX10EU1_20240115-105444-1.2.8-59063a9a.json
script/: cleanup-venv.sh  environment.sh
tests/: __init__.py  conftest.py  test_common.py  test_const.py  test_exceptions.py  test_json.py  test_zeroconf.py
tests/ble/: __init__.py  conftest.py  test_init.py  test_manufacturer_data.py  test_parser.py  test_provisioning.py
tests/ble/backend/: __init__.py  test_scanner.py
tests/block_device/: __init__.py  conftest.py  test_block_device_auth.py  test_block_disable_auth.py  test_block_enable_auth.py  test_device.py  test_init.py
tests/rpc_device/: __init__.py  conftest.py  test_ble.py  test_blerpc.py  test_device.py  test_init.py  test_rpc_disable_auth.py  test_rpc_enable_auth.py  test_set_auth.py  test_utils.py  test_wsrpc.py
tests/rpc_device/fixtures/shelly2pmg3/: Cover.GetStatus  Shelly.GetStatus  Shelly.ListMethods
tests/rpc_device/fixtures/shellyblugatewaygen3/: BluTrv.GetRemoteConfig  Shelly.GetComponents  Shelly.GetConfig  Shelly.GetDeviceInfo  Shelly.GetStatus
tests/rpc_device/fixtures/shellymini1gen4/: Shelly.GetComponents  Shelly.GetConfig  Shelly.GetDeviceInfo  Shelly.GetStatus
tests/rpc_device/fixtures/shellyplugus/: Shelly.GetConfig
tests/rpc_device/fixtures/shellyplus2pm/: Cover.Close_auth_failure  Cover.Close_success  shelly.json
tests/rpc_device/fixtures/st1820/: Shelly.ListMethods
tools/: __init__.py  ble_provision_wifi.py  common.py  example.py  fixture.py  verify.py
tools/common/: __init__.py
