[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "aioshelly"
version = "0.0.0"
license = "Apache-2.0"
description = "Asynchronous library to control Shelly devices."
readme = "README.md"
authors = [{ name = "Paulus Schoutsen", email = "paulus@home-assistant.io" }]
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.14.0",
  "bleak-retry-connector>=3.0.0",
  "bluetooth-data-tools>=1.28.0",
  "habluetooth>=6.3.0",
  "orjson>=3.11.6",
  "yarl",
  "zeroconf>=0.148.0"
]

[dependency-groups]
lint = [
  "prek==0.4.10",
  "pydocstyle==6.3.0",
  "ruff==0.16.0",
  "types-requests",
  "ty==0.0.63",
]
dev = [
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest==9.1.1",
  "requests",
  "tox==4.58.0",
  "tox-gh-actions",
]

[project.urls]
"Source code" = "https://github.com/home-assistant-libs/aioshelly"

[tool.setuptools.packages.find]
include = ["aioshelly*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["aioshelly"]

[tool.ruff]
target-version = "py311"

lint.select = ["ALL"]

lint.ignore = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed
    "ASYNC109", # Async function definition with a `timeout` parameter
    "COM812",   # Trailing comma missing (conflicts with formatter)
    "CPY001",   # Missing copyright notice at top of file
    "D203",     # 1 blank line required before class docstring (conflicts with `no-blank-line-before-class` (D211))
    "D213",     # Multi-line docstring summary should start at the second line (conflicts with multi-line-summary-first-line` (D212))
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
    "FBT003",   # Boolean positional value in function call
    "G201",     # Logging `.exception(...)` should be used instead of `.error(..., exc_info=True)`
    "N818",     # Exception name should be named with an Error suffix
    "PLR0912",  # Too many branches
    "TC001",   # Move application import into a type-checking block
    "TC002",   # Move third-party import into a type-checking block
    "TC003",   # Move standard library import into a type-checking block
    "TC006",    # Add quotes to type expression in typing.cast()
    "TID252",   # Prefer absolute imports over relative imports from parent modules
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY400",   # Use `logging.exception` instead of `logging.error`
]
[tool.ruff.lint.per-file-ignores]
"tools/*" = [
    "T201",      # `print` found
]
"tests/**/*" = [
    "PLR0917",   # Too many positional arguments
    "D100",
    "PLR0913",
    "PLR2004",
    "S101",
    "SLF001",
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.tox]
legacy_tox_ini = """

[tox]
envlist = py311, py312, py313, py314, lint, prek, ty, tests
skip_missing_interpreters = True

[testenv]
setenv =
    UV_PROJECT_ENVIRONMENT = {envdir}

[gh-actions]
python =
  3.11: py311, tests, lint, prek, ty
  3.12: py312, tests
  3.13: py313, tests
  3.14: py314, tests

[testenv:lint]
skip_install = true
allowlist_externals = uv
ignore_errors = True
commands =
  uv sync --all-groups --frozen
  uv run ruff format --check ./
  uv run ruff check ./
  uv run pydocstyle aioshelly

[testenv:prek]
skip_install = true
allowlist_externals = uv
ignore_errors = True
commands =
  uv sync --all-groups --frozen
  uv run prek run \
    check-executables-have-shebangs \
    trailing-whitespace \
    end-of-file-fixer \
    check-yaml \
    check-json \
    check-toml \
    mixed-line-ending \
    --all-files

[testenv:ty]
skip_install = true
allowlist_externals = uv
ignore_errors = True
commands =
  uv sync --all-groups --frozen
  uv run ty check

[testenv:tests]
skip_install = true
allowlist_externals = uv
ignore_errors = True
commands =
  uv sync --all-groups --frozen
  uv run python -m pytest --cov=aioshelly --cov-report=xml --cov-report=term-missing
"""
